# qsearch

./: .gitignore  .gitmodules  .readthedocs.yml  CMA_Search_Compiler.py  CMA_Solver.py  LICENSE  Makefile  QASM_Gates.py  README.md  SC_CMA_Solver.py  SC_Circuits.py  SC_Gatesets.py  SC_Logging.py  SC_Sample_Gates.py  SC_Search_Compiler.py  SC_Step_Compiler.py  SC_Utils.py  SC_Widened_Search_Compiler.py  benchmark.py  benchmarks.py  ethylene-4.qasm  hhlv2.py  qasm_parser.py  recompiler_qasm_script.py  requirements.txt  script.py  setup.cfg  setup.py  test-requirements.txt  verification_script.py
.github/: CODEOWNERS
.github/workflows/: main.yml  rust.yml  test-rust.yml
compilations-CNOT/Miro/: Miro-pylog.txt
compilations-CNOT/fredkin/: fredkin-pylog.txt
compilations-CNOT/peres/: peres-final.txt  peres-path.txt  peres-target.txt
compilations-CNOT/qft2/: qft2-final.txt  qft2-pylog.txt  qft2-qasm.txt  qft2-structure.txt  qft2-vector.txt
compilations-CNOT/qft3/: qft3-final.txt  qft3-pylog.txt  qft3-qasm.txt  qft3-structure.txt  qft3-target.txt  qft3-vector.txt
compilations-CNOT/test/: test-pylog.txt
compilations-CNOT/toffoli/: toffoli-path.txt  toffoli-qasm.txt  toffoli-structure.txt  toffoli-vector.txt
compilations-DEBUG/HHL/: HHL-final.txt  HHL-pylog.txt  HHL-qasm.txt  HHL-structure.txt  HHL-target.txt  HHL-vector.txt
compilations-DEBUG/fredkin/: fredkin-final.txt  fredkin-pylog.txt  fredkin-qasm.txt  fredkin-structure.txt  fredkin-target.txt  fredkin-vector.txt
compilations-DEBUG/peres/: peres-final.txt  peres-pylog.txt  peres-qasm.txt  peres-structure.txt  peres-vector.txt
compilations-DEBUG/qft2/: qft2-final.txt  qft2-pylog.txt  qft2-qasm.txt  qft2-structure.txt  qft2-vector.txt
compilations-DEBUG/qft3-benchmark/: qft3-pylog.txt
compilations-DEBUG/qft3-line/: qft3-line-final.txt  qft3-line-pylog.txt  qft3-line-qasm.txt  qft3-line-structure.txt  qft3-line-vector.txt
compilations-DEBUG/qft3-ring/: qft3-ring-final.txt  qft3-ring-pylog.txt  qft3-ring-qasm.txt  qft3-ring-structure.txt  qft3-ring-vector.txt
compilations-DEBUG/test/: test-final.txt  test-pylog.txt  test-structure.txt  test-target.txt  test-vector.txt
compilations-DEBUG/toffoli/: toffoli-final.txt  toffoli-pylog.txt  toffoli-qasm.txt  toffoli-target.txt  toffoli-vector.txt
compilations-crz/fredkin/: fredkin-final.txt  fredkin-pylog.txt  fredkin-qasm.txt  fredkin-structure.txt  fredkin-vector.txt
compilations-crz/miro/: miro-final.txt  miro-pylog.txt  miro-qasm.txt  miro-structure.txt  miro-target.txt  miro-vector.txt
compilations-crz/qft2/: qft2-final.txt  qft2-pylog.txt  qft2-qasm.txt  qft2-vector.txt
compilations-crz/toffoli/: toffoli-pylog.txt
compilations/Miro/: Miro-final.txt  Miro-pylog.txt  Miro-structure.txt  Miro-vector.txt
compilations/fredkin/: fredkin-final.txt  fredkin-path.txt  fredkin-pylog.txt
compilations/fredkin-old/: fredkin-pylog.txt
compilations/peres/: peres-pylog.txt
compilations/qft2/: qft2-final.txt  qft2-path.txt  qft2-pylog.txt  qft2-vector.txt
compilations/qft3/: qft3-path.txt  qft3-pylog.txt
compilations/toffoli/: toffoli-final.txt  toffoli-pylog.txt
docs/: conf.py  gates.md  gatesets.md  index.rst  requirements.txt
examples/: average_time.py  benchmarks.py  eval_func_comparison.py  gradient_test.py  leap_qft4.py  multistart.py  postprocessing.py  qft5.qasm  qft5_ibm_yorktown.py  qiskit_import.py  qutrit_csum.py  stateprep.py
examples/TFIMs/: circuit_eph_1.0_time_30_4.unitary  circuit_eph_1.0_time_3_3.unitary  circuit_eph_1.0_time_42_3.unitary  circuit_eph_1.0_time_60_3.unitary  circuit_eph_1.0_time_6_3.unitary
examples/stateprep-example/: qcproject  (+2 more)
misc/: cori.bash
native/: Cargo.toml  Dockerfile  README.md  pyproject.toml  test.py
native/complexmat/: Cargo.toml
native/complexmat/src/: lib.rs
native/squaremat/: Cargo.toml  build.rs
native/squaremat/src/: lib.rs
native/src/: circuits.rs  compiler.rs  gatesets.rs  lib.rs  main.rs  matrix.rs  solver.rs  utils.rs
native/src/solvers/: LICENSE  README.md  bfgs.rs  mod.rs
native/test/: qcproject  qft3-log.txt  test-project-log.txt
native/tests/: test_circuit.py  test_prod.py
qsearch/: __init__.py  advanced_unitaries.py  assembler.py  assemblers.py  backend.py  backends.py  checkpoint.py  checkpoints.py  circuits.py  comparison.py  compiler.py  defaults.py  evaluation.py  gates.py  gatesets.py  graphics.py  heuristics.py  integrations.py  leap_compiler.py  logging.py  multistart_solver.py  multistart_solvers.py  objectives.py  options.py  parallelizer.py  parallelizers.py  persistent_aposmm.py  post_processing.py  project.py  qiskit.py  reoptimizing_compiler.py  solver.py  solvers.py  solvers_future.py  solvers_higher_order.py  unitaries.py  utils.py
qsrs/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  test-requirements.txt
qsrs/ceres/: Cargo.toml
qsrs/ceres/ceres-sys/: Cargo.toml  build.rs
qsrs/ceres/ceres-sys/src/: lib.rs  solve_silent.rs
qsrs/ceres/src/: lib.rs
qsrs/squaremat/: Cargo.toml  build.rs
qsrs/squaremat/src/: lib.rs
qsrs/src/: circuits.rs  compiler.rs  gatesets.rs  heuristic.rs  lib.rs  main.rs  solvers.rs  utils.rs
scripts/: average_time.py  benchmarks.py  build_rust.sh  compare_times.py  cori.bash  roundtrip.py
scrs/: Cargo.toml  Untitled.ipynb  out  test.py
scrs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scrs/src/: circuits.rs  gatesets.rs  lib.rs  main.rs  utils.rs
search_compiler/: README  __init__.py  advanced_gates.py  advanced_unitaries.py  assembler.py  backend.py  checkpoint.py  circuits.py  compiler.py  compiler_beta.py  gates.py  gatesets.py  graphics.py  heuristic.py  logging.py  multistart_solver.py  parallelizer.py  project.py  qasm_circuits.py  qasm_gates.py  refine.py  sample_gates.py  solver.py  unitaries.py  utils.py
tests/: conftest.py  test_assemble.py  test_circuit.py  test_defaults.py  test_gatesets.py  test_gradients.py  test_integration.py  test_leap.py  test_objectives.py  test_parallelizer.py  test_roundtrip.py  test_solver.py  test_solvers.py  test_stateprep.py
