[metadata]
name = search_compiler
version = 1.2.1
description = Search-Based Quantum Synthesis/Compilation
long_description_content_type = text/markdown
author = LBNL - AQT
author_email = marc.davis@lbl.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Software Development :: Compilers
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = quantum compilers synthesis computing

[options]
packages = search_compiler
python_requires = >=3.6, <4
install_requires =
    numpy
    scipy
    scrs >= 0.6

[options.extras_require]
cma = cma
graphics = matplotlib

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 2.8
testpaths = tests/
python_files = test*.py
norecursedirs = .env
filterwarnings =
    error
    default:Using or importing the ABCs:DeprecationWarning:unittest2.*
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning
    ignore:Module already imported so cannot be rewritten:pytest.PytestWarning
    ignore:.*U.*mode is deprecated:DeprecationWarning:(?!(pytest|_pytest))
    ignore:.*type argument to addoption.*:DeprecationWarning
    ignore:.*inspect.getargspec.*deprecated, use inspect.signature.*:DeprecationWarning
    ignore::pytest.PytestExperimentalApiWarning
    default:invalid escape sequence:DeprecationWarning
    ignore::_pytest.warning_types.PytestUnknownMarkWarning
    ignore:"@coroutine" decorator is deprecated:DeprecationWarning
