[package]
name = "scrs"
version = "0.1.0"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
license = "BSD-3-Clause"
edition = "2018"

[features]
static = ["openblas-src/static", "squaremat/static"]
default = ["openblas-src/system", "squaremat/system"]

[dependencies]
num-complex = { version = "0.2", features = ["serde"] }
ndarray = {version = "0.13", features = ["blas"] }
blas-src = { version = "0.4.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.7.0", default-features = false, features = ["cblas"] }
enum_dispatch = "0.2.1"
numpy = "0.7"
libc = "0.2"
num-traits = "0.2"
reduce = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
better-panic = "0.2"
squaremat = { path = "./squaremat", version = "0.1" }
md5 = "0.7"

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]


[lib]
name = "search_compiler_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Compilers',
]