[package]
name = "scrs"
version = "0.5.0"
authors = ["Ethan Smith <ethanhs@lbl.gov>"]
license = "BSD-3-Clause"
edition = "2018"
build = "build.rs"

[features]
static = ["openblas-src", "blas-src/openblas", "openblas-src/static", "openblas-src/cblas", "squaremat/openblas-static"]
default = ["openblas-src", "blas-src/openblas", "openblas-src/system", "openblas-src/cblas", "squaremat/openblas-system"]
accelerate = ["accelerate-src", "blas-src/accelerate", "squaremat/accelerate"]
mkl = ["intel-mkl-src", "blas-src/intel-mkl", "squaremat/mkl"]

[dependencies]
num-complex = { version = "0.2", features = ["serde"] }
ndarray = {version = "0.13", features = ["blas"] }
blas-src = { version = "0.4.0", default-features = false }
openblas-src = { version = "0.7.0", default-features = false, optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.5.0", optional = true }
enum_dispatch = "0.2.1"
numpy = "0.7"
libc = "0.2"
num-traits = "0.2"
reduce = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
better-panic = "0.2"
squaremat = { path = "./squaremat", version = "0.4" }
md5 = "0.7"

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]


[lib]
name = "search_compiler_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Compilers',
]
