[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
manylinux = "off"
cargo-extra-args = "--features=python"
# To use Apple's Accelerate framework, uncomment the following line
#cargo-extra-args = "--no-default-features --features=accelerate,python"
# To use Intel's MKL, uncomment the following line
#cargo-extra-args = "--no-default-features --features=mkl,python"