[package]
name = "qsrs"
version = "2.0.1"
authors = ["Ethan Smith <ethanhs@berkeley.edu>"]
license = "LGPL-2.1 AND BSD-3-Clause"
edition = "2018"
build = "build.rs"
publish = false
include = ["src/**/*", "LICENSE", "README.md", "build.rs", "Dockerfile", "pyproject.toml", "test-requirements.txt", "squaremat/**/*", "ceres/**/*"]

[features]
static = ["openblas-src", "blas-src/openblas", "openblas-src/static", "squaremat/openblas-static", "openblas-src/cblas", "ceres/static"]
default = ["openblas-src", "blas-src/openblas", "openblas-src/system", "openblas-src/cblas", "squaremat/openblas-system", "rustopt"]
accelerate = ["accelerate-src", "blas-src/accelerate", "squaremat/accelerate"]
mkl = ["intel-mkl-src", "blas-src/intel-mkl", "squaremat/mkl"]
python = ["numpy"]
rustopt = ["nlopt", "ceres"]

[dependencies]
num-complex = { version = "0.4.0", features = ["serde"] }
ndarray = { version = "0.15.4", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false }
openblas-src = { version = "0.10.4", default-features = false, optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.6.0+mkl2020.1", optional = true, features = ["mkl-static-lp64-seq"] }
enum_dispatch = "0.3.7"
numpy = { version = "0.15.1", optional = true }
libc = "0.2.112"
num-traits = "0.2.14"
better-panic = "0.2.0"
squaremat = { path = "./squaremat" }
md5 = "0.7.0"
rand = "0.8.4"
nlopt = { version = "0.5.4", optional = true }
ceres = { path = "./ceres", optional = true }
num_cpus = "1.13.1"
pyo3 = { version = "0.15.1", features = ["extension-module", "abi3-py37"] }


[patch.crates-io]
# remove once https://github.com/blas-lapack-rs/blas-src/pull/9 is merged
blas-src = { git="https://github.com/ethanhs/blas-src", branch="patch-1" }
# Waiting on openblas-src to make a new 0.11 release...
openblas-src = { git="https://github.com/blas-lapack-rs/openblas-src" }

[lib]
name = "qsrs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "qsearch_run"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Compilers',
]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2020.06"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", install = ["ceres", "eigen3", "openblas", "glog", "gflags"] }
