[build-system]
requires = [
    "maturin>=0.9.0",
    "oldest-supported-numpy",
]
build-backend = "maturin"

[tool.maturin]
manylinux = "off"
cargo-extra-args = "--features=python,rustopt"
# To use Apple's Accelerate framework, uncomment the following line
#cargo-extra-args = "--no-default-features --features=accelerate,python,rustopt,ceres/system"
# To use Intel's MKL, uncomment the following line
#cargo-extra-args = "--no-default-features --features=mkl,python,rustopt,ceres/system"
# On Windows we statically link to ceres and other dependencies (other than openblas)
#cargo-extra-args="--no-default-features --features python,static,rustopt,openblas-src/system,squaremat/openblas-system"