[package]
name = "complexmat"
version = "0.1.0"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = { version = "0.2.3", features = ["serde"] }
ndarray = "0.13.0"
rblas = { version = "*", git = "https://github.com/ethanhs/rust-blas" }
libc = "0.2.66"
serde = { version = "1.0.103", features = ["derive"] }
float-cmp = "0.6.0"

[dependencies.smallvec]
version = "1.0.0"
features = ["union", "serde"]
