[package]
name = "squaremat"
version = "0.6.0"
authors = ["Ethan Smith <ethanhs@lbl.gov>"]
edition = "2018"
build = "build.rs"

[features]
openblas-static = ["openblas-src", "blas-src/openblas", "openblas-src/static", "openblas-src/cblas"]
openblas-system = ["openblas-src", "blas-src/openblas", "openblas-src/system", "openblas-src/cblas"]
accelerate = ["accelerate-src", "blas-src/accelerate"]
mkl = ["intel-mkl-src", "blas-src/intel-mkl"]

[dependencies]
num-complex = { version = "0.2.4", features = ["serde"] }
cblas = "0.2.0"
ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.6.1", default-features = false }
openblas-src = { version = "0.9.0", default-features = false, optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.5.0", optional = true }
libc = "0.2.68"
serde = { version = "1.0.106", features = ["derive"] }
float-cmp = "0.6.0"

[lib]
name = "squaremat"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
