[package]
name = "squaremat"
version = "0.7.0"
authors = ["Ethan Smith <ethanhs@lbl.gov>"]
edition = "2018"
build = "build.rs"

[features]
openblas-static = ["openblas-src", "blas-src/openblas", "openblas-src/static", "openblas-src/cblas"]
openblas-system = ["openblas-src", "blas-src/openblas", "openblas-src/system", "openblas-src/cblas"]
accelerate = ["accelerate-src", "blas-src/accelerate"]
mkl = ["intel-mkl-src", "blas-src/intel-mkl"]

[dependencies]
num-complex = "0.3.0"
cblas = "0.3.0"
ndarray = { version = "0.14.0", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false }
openblas-src = { version = "0.10.4", default-features = false, optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.5.0", optional = true }
libc = "0.2.93"

[patch.crates-io]
openblas-src = { git = "https://github.com/ethanhs/openblas-src", branch="vcpkgfix" }

[lib]
name = "squaremat"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true
